@@ -1,3 +1,10 @@
+2008-05-21  Neal H. Walfield  <neal@gnu.org>
+
+	* ager.c (ager_loop): To see if we are at the start of a period,
+	check if ITERATIONS is a multiple of FREQ, not if it is zero.  Set
+	each activity's statistic's period field.  Always increment
+	iterations.
+
 2008-02-21  Neal H. Walfield  <neal@gnu.org>
 
 	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
